# pingu

./: .env.sample  .gitignore  .prek-commit-config.yaml  README.md  conftest.py  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
doc/: DESIGN_GUIDE.md  DNS.md  SPECIFICATION.md  pingu-checks.service  pingu-checks.timer  pingu-cleanup.service  pingu-cleanup.timer  pingu-dashboard-mockup.html  pingu-detail-mockup.html  pingu-form-mockup.html  pingu-history-mockup.html  pingu-web.service
src/pingu/: settings.py  urls.py  wsgi.py
src/pingu/accounts/: apps.py
src/pingu/accounts/templates/account/: login.html
src/pingu/alerts/: admin.py  apps.py  backends.py  models.py  services.py
src/pingu/alerts/migrations/: 0001_initial.py
src/pingu/alerts/tests/: test_backends.py  test_services.py
src/pingu/core/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
src/pingu/core/management/commands/: cleanup_results.py  run_checks.py
src/pingu/core/migrations/: 0001_initial.py
src/pingu/core/templates/core/: check_confirm_delete.html  check_detail.html  check_form.html  check_history.html  dashboard.html
src/pingu/core/tests/: test_commands.py  test_forms.py  test_models.py  test_services.py  test_views.py
src/pingu/templates/: base.html
static/css/: input.css
